<resources>
    <string name="app_name">LibreSwipe</string>


    <string name="title_activity_main_menu">LibreSwipe</string>
    <string name="pref_startup">pref_startup</string>
    <string name="pref_title_startup">Startup</string>
    <string name="pref_summary_startup">Start LibreSwipe on boot</string>
    <string name="pref_notification">pref_notification</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_summary_notification">Enable persistent notification while running</string>
    <string name="pref_hide_app_names">pref_hide_app_names</string>
    <string name="pref_title_hide_app_names">App names</string>
    <string name="pref_summary_hide_app_names">Hide app names in drawer</string>
    <string name="str_pinned_apps">Pinned Apps</string>
    <string name="str_hidden_apps">Hidden Apps</string>
    <string name="str_settings">Settings</string>
    <string name="pref_hide_non_pinned">pref_hide_non_pinned</string>
    <string name="pref_title_hide_non_pinned">Hide non-pinned apps</string>
    <string name="pref_summary_hide_non_pinned">Only show pinned apps</string>
    <string name="pref_dock_side">pref_dock_side</string>
    <string name="pref_title_dock_side">Drawer side</string>
    <string name="pref_dock_side_default">0</string>
    <string name="pref_summary_dock_side">Side on which the app drawer will appear</string>
    <string name="str_turn_on_off">Turn LibreSwipe On/Off</string>
    <string name="pref_dark_draw">pref_dark_draw</string>
    <string name="pref_title_dark_drawer">Dark drawer</string>
    <string name="pref_summary_dark_drawer">Use dark backgrounds for items in drawer</string>
    <string name="settings_apps_updated">LibreSwipe settings/apps updated</string>
    <string name="tap_to_open_settings">LibreSwipe is running - Tap to open settings</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="turned_off">LibreSwipe has been turned off</string>
    <string name="turned_on">LibreSwipe has been turned on</string>
    <string name="remove_app">Remove app</string>
    <string name="remove_x_from_y_apps">Are you sure you want to remove %1$s from your %2$s apps?</string>
    <string name="page_name_nav">%1$s -> %2$s</string>

</resources>
