<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_startup"
        android:title="@string/pref_title_startup"
        android:summary="@string/pref_summary_startup"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/pref_notification"
        android:title="@string/pref_title_notification"
        android:summary="@string/pref_summary_notification"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="@string/pref_hide_app_names"
        android:title="@string/pref_title_hide_app_names"
        android:summary="@string/pref_summary_hide_app_names"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/pref_hide_non_pinned"
        android:title="@string/pref_title_hide_non_pinned"
        android:summary="@string/pref_summary_hide_non_pinned"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/pref_dark_draw"
        android:title="@string/pref_title_dark_drawer"
        android:summary="@string/pref_summary_dark_drawer"
        android:defaultValue="false" />

    <ListPreference
        android:key="@string/pref_dock_side"
        android:title="@string/pref_title_dock_side"
        android:dialogTitle="@string/pref_title_dock_side"
        android:summary="@string/pref_summary_dock_side"
        android:entries="@array/pref_dock_side_entries"
        android:entryValues="@array/pref_dock_side_values"
        android:defaultValue="@string/pref_dock_side_default" />

</PreferenceScreen>
